Fixes #35 by adding dark mode

--- a/styles/AboutMe.module.scss
+++ b/styles/AboutMe.module.scss
@@ -8,15 +8,15 @@
     height: 150px;
     width: 150px;
     margin: 20px;
-    background-color: rgba(40, 40, 40, 0.1);
+    background-color: var(--color-follow-icon-bg);
     display: flex;
     justify-content: center;
     align-items: center;
     transition: all 0.2s ease;
 
     &:hover {
-      border-color: #0060df;
-      background-color: rgba(21, 140, 186, 0.4);
+      border-color: var(--color-link);
+      background-color: var(--color-follow-icon-hover);
     }
 
     > img {
