--- a/styles/Now.module.scss
+++ b/styles/Now.module.scss
@@ -8,7 +8,7 @@ h3.sectionHeader {
 
 .history {
   margin-left: 24px;
-  background-color: #efefef;
+  background-color: var(--color-bg-subtle);
   padding: 16px;
 }
 
