--- a/styles/Sidebar.module.scss
+++ b/styles/Sidebar.module.scss
@@ -5,9 +5,9 @@
   margin-left: -300px;
   height: 100%;
   text-align: center;
-  background-color: #f8f8f8;
+  background-color: var(--color-bg-muted);
   z-index: 3;
-  box-shadow: 5px 0px 5px #e7e7e7;
+  box-shadow: 5px 0px 5px var(--color-border-subtle);
 
   .listGroup {
     display: flex;
@@ -20,15 +20,15 @@
       display: block;
       padding: 10px 15px;
       margin-bottom: -1px;
-      background-color: #ffffff;
-      border: 1px solid #dddddd;
-      color: #555555;
+      background-color: var(--color-bg);
+      border: 1px solid var(--color-border);
+      color: var(--color-text);
       min-height: 2rem;
       cursor: pointer;
 
       &:hover {
-        color: #0060df;
-        background-color: #f5f5f5;
+        color: var(--color-link);
+        background-color: var(--color-hover-bg);
       }
     }
   }
@@ -63,7 +63,7 @@
 
     &:hover {
       opacity: 0.5;
-      border-color: #0060df;
+      border-color: var(--color-link);
       > a {
         color: #fff;
         opacity: 1;
