--- a/styles/WebDev.module.scss
+++ b/styles/WebDev.module.scss
@@ -22,7 +22,7 @@ article.application {
     display: inline-block;
     margin-left: 16px;
     padding: 16px;
-    background: white;
+    background: var(--color-bg);
     border-radius: 8px;
 
     h2 {
